k8s-files/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-be
  template:
    metadata:
      labels:
        app: lms-be
    spec:
      containers:
        - name: backend-container
          image: mmanoj2002/lms-api
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: lms-be-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
  selector:
    app: lms-be
