k8s-files/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api.manojreddy.ltd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lms-be-service
            port:
              number: 3000
